# inf-masterproef

./: README.md
code/: readme.txt
code/glrender/: Cargo.toml  makefile
code/glrender/src/: framebuffer.rs  gl_font_render.rs  lib.rs  main.rs  texture.rs  vertexbuffer.rs  window.rs
code/glrender/src/gl_csg/: bricktex.rs  mod.rs
code/glrender/src/gl_mesh/: glmesh.rs  mod.rs
code/glrender/src/gl_points/: glpointslist.rs  mod.rs
code/glrender/src/shader_program/: mod.rs  shader.rs
code/glrender/src/shaders/: 2d_shader.frag  2d_shader.vert  csg.frag  csg.vert  csg_picking.frag  mesh.frag  mesh.vert  mesh_picking.frag  points.frag  points.vert  svo_shader.frag  svo_shader.vert  text_shader.frag
code/glrender/tests/: test_csg_picking.rs  test_mesh_draw.rs  test_points_draw.rs
code/patfile/: Cargo.toml  data
code/patfile/src/: lib.rs  main.rs  test.rs
code/patfile/testfiles/: test_scan_file  test_write_file_complex  test_write_file_simple
code/patutil/: Cargo.toml
code/vegsim/: Cargo.toml
code/vegsim/src/: controller.rs  main.rs  parameters.rs  treeparameter.rs  uirender.rs
code/vegsim/src/tree/: branchdata.rs  cone.rs  environment.rs  markerset.rs  metamer.rs  mod.rs  plant.rs  plantgenetics.rs  resourcedistibutor.rs  shadowvoxelset.rs  support_pole.rs
code/vegsim/src/tree/partcreator/: mod.rs
code/vegsim/src/tree/pruning_module/: autoprune_spalier.rs  mod.rs
code/vegsim/src/ui/: geneticsview.rs  message.rs  metamerinfo.rs  mod.rs  prunebuttons.rs
code/vegsim/src/util/: boundingvolume.rs  meshcreate.rs  mod.rs  random.rs
(+55 files in other folders)
