[package]
name = "glrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
patutil = {path = "../patutil"}
gl = "0.14.0"
iced_glutin = "0.4.0"
nalgebra-glm = "0.17.0"
tobj = "3.2.3"
image = "0.24.4"