[package]
name = "vegsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glrender = {path = "../glrender"}
patutil = {path = "../patutil"}
nalgebra-glm = "0.17.0"
rand = "0.8.5"

iced_glutin = "0.4.0"
iced_glow = "0.4.1"
iced_winit = "0.5.1"
image = "0.24.4"
lazy_static = "1.4.0"
pcg_rand = "0.13.0"